[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/LevelSelector.gd" type="Script" id=2]
[ext_resource path="res://Audio/level_ost.mp3" type="AudioStream" id=3]
[ext_resource path="res://Fonts/ARIAL.TTF" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.4, 0.4, 0.4, 1 )
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.27451, 0.27451, 0.27451, 1 )
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=4]
corner_radius_top_left = 64
corner_radius_top_right = 64
corner_radius_bottom_right = 64
corner_radius_bottom_left = 64

[sub_resource type="DynamicFont" id=5]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="LevelSelector" type="Node2D"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_left = 8.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="bg" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
color = Color( 0.184314, 0.843137, 0.858824, 1 )

[node name="coins" type="Label" parent="Control"]
margin_right = 304.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 1 )
text = "Coins: 0"
valign = 1

[node name="levels" type="Label" parent="Control"]
margin_left = -8.0
margin_top = 225.0
margin_right = 304.0
margin_bottom = 280.0
custom_fonts/font = ExtResource( 1 )
text = " Levels:"
valign = 1

[node name="1" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -564.0
margin_top = -64.0
margin_right = -436.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "1"

[node name="s" type="Label" parent="Control/1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.5
margin_top = 64.0
margin_right = 88.5
margin_bottom = 128.0
custom_fonts/font = SubResource( 5 )
text = "(Locked)
150 Coins"
align = 1
valign = 1

[node name="2" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -324.0
margin_top = -64.0
margin_right = -196.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "2"

[node name="s" type="Label" parent="Control/2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.5
margin_top = 64.0
margin_right = 88.5
margin_bottom = 128.0
custom_fonts/font = SubResource( 5 )
text = "(Locked)
350 Coins"
align = 1
valign = 1

[node name="3" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "3"

[node name="s" type="Label" parent="Control/3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.5
margin_top = 64.0
margin_right = 88.5
margin_bottom = 128.0
custom_fonts/font = SubResource( 5 )
text = "(Locked)
550 Coins"
align = 1
valign = 1

[node name="4" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 204.0
margin_top = -64.0
margin_right = 332.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "4"

[node name="s" type="Label" parent="Control/4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.5
margin_top = 64.0
margin_right = 88.5
margin_bottom = 128.0
custom_fonts/font = SubResource( 5 )
text = "(Locked)
750 Coins"
align = 1
valign = 1

[node name="5" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 428.0
margin_top = -64.0
margin_right = 556.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "5"

[node name="s" type="Label" parent="Control/5"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.5
margin_top = 64.0
margin_right = 88.5
margin_bottom = 128.0
custom_fonts/font = SubResource( 5 )
text = "(Locked)
950 Coins"
align = 1
valign = 1

[node name="sus" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -620.0
margin_top = 208.0
margin_right = -324.0
margin_bottom = 336.0
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Mega Sus"

[node name="ct_ost" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
autoplay = true

[connection signal="pressed" from="Control/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="Control/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="Control/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="Control/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="Control/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="Control/sus" to="." method="_on_sus_pressed"]
